<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/almostBlack"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="20dp">

        <TextView
            android:id="@+id/workingsTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:lines="2"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/resultsTv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultsTv"
            android:layout_width="match_parent"
            android:layout_marginTop="100dp"
            android:layout_height="wrap_content"
            android:text=""
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        style="@style/buttonRow">
        <Button
            style="@style/buttonNumber"
            android:text="@string/ac"
            android:textColor="@color/red"
            android:onClick="allClearAction"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/u2190"
            android:onClick="backSpaceAction"
            android:textColor="@color/red"/>
        <Button
            style="@style/buttonOperation"
            android:text="@string/slash" />
    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">
        <Button
            style="@style/buttonNumber"
            android:text="@string/_7" />
        <Button
            style="@style/buttonNumber"
            android:text="@string/_8" />
        <Button
            style="@style/buttonNumber"
            android:text="@string/_9" />
        <Button
            style="@style/buttonOperation"
            android:text="@string/x" />
    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">
        <Button
            style="@style/buttonNumber"
            android:text="@string/_4" />
        <Button
            style="@style/buttonNumber"
            android:text="@string/_5" />
        <Button
            style="@style/buttonNumber"
            android:text="@string/_6" />
        <Button
            style="@style/buttonOperation"
            android:text="@string/hyphen" />
    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">
        <Button
            style="@style/buttonNumber"
            android:text="@string/_1" />
        <Button
            style="@style/buttonNumber"
            android:text="@string/_2" />
        <Button
            style="@style/buttonNumber"
            android:text="@string/_3" />
        <Button
            style="@style/buttonOperation"
            android:text="@string/plus" />
    </LinearLayout>


    <LinearLayout
        style="@style/buttonRow">
        <Button
            style="@style/buttonNumber"
            android:text="@string/dot" />
        <Button
            style="@style/buttonNumber"
            android:text="@string/_0" />
        <Button
            style="@style/buttonNumber"
            android:layout_weight="2"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:onClick="equalsAction"
            android:text="@string/equals" />
    </LinearLayout>


</LinearLayout>